@@ -389,7 +389,7 @@ gimp_layer_set_offsets (gint32 layer_ID,
  *
  * This procedure creates a layer mask for the specified layer. Layer
  * masks serve as an additional alpha channel for a layer. A number of
- * ifferent types of masks are allowed for initialisation: completely
+ * different types of masks are allowed for initialisation: completely
  * white masks (which will leave the layer fully visible), completely
  * black masks (which will give the layer complete transparency, the
  * layer's already existing alpha channel (which will leave the layer
@@ -497,8 +497,9 @@ gimp_layer_from_mask (gint32 mask_ID)
  * serve as an additional alpha channel for a layer. This procedure
  * will fail if a number of prerequisites aren't met. The layer cannot
  * already have a layer mask. The specified mask must exist and have
- * the same dimensions as the layer. Both the mask and the layer must
- * have been created for use with the specified image.
+ * the same dimensions as the layer. The layer must have been created
+ * for use with the specified image and the mask must have been created
+ * with the procedure 'gimp-layer-create-mask'.
  *
  * Returns: TRUE on success.
  */
