@@ -1,3 +1,8 @@
+2007-03-28  Sven Neumann  <sven@gimp.org>
+
+	* app/pdb/layer_cmds.c
+	* libgimp/gimplayer_pdb.c: regenerated.
+
 2007-03-28 João S. O. Bueno Calligaris <gwidion@mpc.com.br>
 
         * tools/pdbgen/pdb/layer.pdb: clarified documentation for
